--- a/Views/Panel/Index.cshtml
+++ b/Views/Panel/Index.cshtml
@@ -25,11 +25,449 @@ else
             <div class="row">
                 <div class="col-md-12">
                     <div class="tile">
-                        <div class="tile-body">XD</div>
+                        <div class="row">
+                            <div class="col-md-6 col-lg-3">
+                                <div class="widget-small primary coloured-icon">
+                                    <i class="icon fas fa-user-shield fa-3x"></i>
+                                    <div class="info">
+                                        <a href="@Url.Content("~/Admin/Admins")">
+                                            <h4>Administradores</h4>
+                                            <p><b>@ViewBag.Admin</b></p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3">
+                                <div class="widget-small info coloured-icon">
+                                    <i class="icon fas fa-chalkboard-teacher fa-3x"></i>
+                                    <div class="info">
+                                        <a href="@Url.Content("~/Admin/Docentes")">
+                                            <h4>Docentes</h4>
+                                            <p><b>@ViewBag.Doc</b></p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3">
+                                <div class="widget-small warning coloured-icon">
+                                    <i class="icon fas fa-user-graduate fa-3x"></i>
+                                    <div class="info">
+                                        <a href="@Url.Content("~/Admin/Estudiantes")">
+                                            <h4>Estudiantes</h4>
+                                            <p><b>@ViewBag.Estu</b></p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3">
+                                <div class="widget-small danger coloured-icon">
+                                    <i class="icon fas fa-user-friends fa-3x"></i>
+                                    <div class="info">
+                                        <a href="@Url.Content("~/Admin/Acudientes")">
+                                            <h4>Acudientes</h4>
+                                            <p><b>@ViewBag.Padre</b></p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="tile">
+                        <h3 class="tile-title">Usuarios activos</h3>
+                      
+                            
+                     
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="tile">
+                        <h3 class="tile-title">Support Requests</h3>
+                        <figure class="highcharts-figure">
+                            <div id="container"></div>
+                            <p class="highcharts-description">
+                                Chart showing use of rotated axis labels and data labels. This can be a
+                                way to include more labels in the chart, but note that more labels can
+                                sometimes make charts harder to read.
+                            </p>
+                        </figure>
                     </div>
                 </div>
             </div>
         </main>
+
+        @section scripts{
+
+            <script>
+                Highcharts.setOptions({
+                    colors: Highcharts.map(Highcharts.getOptions().colors, function (color) {
+                        return {
+                            radialGradient: {
+                                cx: 0.5,
+                                cy: 0.3,
+                                r: 0.7
+                            },
+                            stops: [
+                                [0, color],
+                                [1, Highcharts.color(color).brighten(-0.3).get('rgb')] // darken
+                            ]
+                        };
+                    })
+                });
+
+                // Build the chart
+                Highcharts.chart('container', {
+                    chart: {
+                        plotBackgroundColor: null,
+                        plotBorderWidth: null,
+                        plotShadow: false,
+                        type: 'pie'
+                    },
+                    title: {
+                        text: ''
+                    },
+                    tooltip: {
+                        pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+                    },
+                    accessibility: {
+                        point: {
+                            valueSuffix: '%'
+                        }
+                    },
+                    plotOptions: {
+                        pie: {
+                            allowPointSelect: true,
+                            cursor: 'pointer',
+                            dataLabels: {
+                                enabled: true,
+                                format: '<b>{point.name}</b>: {point.percentage:.1f} %',
+                                connectorColor: 'silver'
+                            }
+                        }
+                    },
+                    series: [{
+                        name: 'Share',
+                        data: [
+                            { name: 'Chrome', y: 61.41 },
+                            { name: 'Internet Explorer', y: 11.84 },
+                            { name: 'Firefox', y: 10.85 },
+                            { name: 'Edge', y: 4.67 },
+                            { name: 'Safari', y: 4.18 },
+                            { name: 'Other', y: 7.05 }
+                        ]
+                    }]
+                });
+                Highcharts.chart('container', {
+                    chart: {
+                        type: 'column'
+                    },
+                    title: {
+                        text: 'Browser market shares. January, 2018'
+                    },
+                    subtitle: {
+                        text: 'Click the columns to view versions. Source: <a href="http://statcounter.com" target="_blank">statcounter.com</a>'
+                    },
+                    accessibility: {
+                        announceNewData: {
+                            enabled: true
+                        }
+                    },
+                    xAxis: {
+                        type: 'category'
+                    },
+                    yAxis: {
+                        title: {
+                            text: 'Total percent market share'
+                        }
+
+                    },
+                    legend: {
+                        enabled: false
+                    },
+                    plotOptions: {
+                        series: {
+                            borderWidth: 0,
+                            dataLabels: {
+                                enabled: true,
+                                format: '{point.y:.1f}%'
+                            }
+                        }
+                    },
+
+                    tooltip: {
+                        headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
+                        pointFormat: '<span style="color:{point.color}">{point.name}</span>: <b>{point.y:.2f}%</b> of total<br/>'
+                    },
+
+                    series: [
+                        {
+                            name: "Browsers",
+                            colorByPoint: true,
+                            data: [
+                                {
+                                    name: "Chrome",
+                                    y: 62.74,
+                                    drilldown: "Chrome"
+                                },
+                                {
+                                    name: "Firefox",
+                                    y: 10.57,
+                                    drilldown: "Firefox"
+                                },
+                                {
+                                    name: "Internet Explorer",
+                                    y: 7.23,
+                                    drilldown: "Internet Explorer"
+                                },
+                                {
+                                    name: "Safari",
+                                    y: 5.58,
+                                    drilldown: "Safari"
+                                },
+                                {
+                                    name: "Edge",
+                                    y: 4.02,
+                                    drilldown: "Edge"
+                                },
+                                {
+                                    name: "Opera",
+                                    y: 1.92,
+                                    drilldown: "Opera"
+                                },
+                                {
+                                    name: "Other",
+                                    y: 7.62,
+                                    drilldown: null
+                                }
+                            ]
+                        }
+                    ],
+                    drilldown: {
+                        series: [
+                            {
+                                name: "Chrome",
+                                id: "Chrome",
+                                data: [
+                                    [
+                                        "v65.0",
+                                        0.1
+                                    ],
+                                    [
+                                        "v64.0",
+                                        1.3
+                                    ],
+                                    [
+                                        "v63.0",
+                                        53.02
+                                    ],
+                                    [
+                                        "v62.0",
+                                        1.4
+                                    ],
+                                    [
+                                        "v61.0",
+                                        0.88
+                                    ],
+                                    [
+                                        "v60.0",
+                                        0.56
+                                    ],
+                                    [
+                                        "v59.0",
+                                        0.45
+                                    ],
+                                    [
+                                        "v58.0",
+                                        0.49
+                                    ],
+                                    [
+                                        "v57.0",
+                                        0.32
+                                    ],
+                                    [
+                                        "v56.0",
+                                        0.29
+                                    ],
+                                    [
+                                        "v55.0",
+                                        0.79
+                                    ],
+                                    [
+                                        "v54.0",
+                                        0.18
+                                    ],
+                                    [
+                                        "v51.0",
+                                        0.13
+                                    ],
+                                    [
+                                        "v49.0",
+                                        2.16
+                                    ],
+                                    [
+                                        "v48.0",
+                                        0.13
+                                    ],
+                                    [
+                                        "v47.0",
+                                        0.11
+                                    ],
+                                    [
+                                        "v43.0",
+                                        0.17
+                                    ],
+                                    [
+                                        "v29.0",
+                                        0.26
+                                    ]
+                                ]
+                            },
+                            {
+                                name: "Firefox",
+                                id: "Firefox",
+                                data: [
+                                    [
+                                        "v58.0",
+                                        1.02
+                                    ],
+                                    [
+                                        "v57.0",
+                                        7.36
+                                    ],
+                                    [
+                                        "v56.0",
+                                        0.35
+                                    ],
+                                    [
+                                        "v55.0",
+                                        0.11
+                                    ],
+                                    [
+                                        "v54.0",
+                                        0.1
+                                    ],
+                                    [
+                                        "v52.0",
+                                        0.95
+                                    ],
+                                    [
+                                        "v51.0",
+                                        0.15
+                                    ],
+                                    [
+                                        "v50.0",
+                                        0.1
+                                    ],
+                                    [
+                                        "v48.0",
+                                        0.31
+                                    ],
+                                    [
+                                        "v47.0",
+                                        0.12
+                                    ]
+                                ]
+                            },
+                            {
+                                name: "Internet Explorer",
+                                id: "Internet Explorer",
+                                data: [
+                                    [
+                                        "v11.0",
+                                        6.2
+                                    ],
+                                    [
+                                        "v10.0",
+                                        0.29
+                                    ],
+                                    [
+                                        "v9.0",
+                                        0.27
+                                    ],
+                                    [
+                                        "v8.0",
+                                        0.47
+                                    ]
+                                ]
+                            },
+                            {
+                                name: "Safari",
+                                id: "Safari",
+                                data: [
+                                    [
+                                        "v11.0",
+                                        3.39
+                                    ],
+                                    [
+                                        "v10.1",
+                                        0.96
+                                    ],
+                                    [
+                                        "v10.0",
+                                        0.36
+                                    ],
+                                    [
+                                        "v9.1",
+                                        0.54
+                                    ],
+                                    [
+                                        "v9.0",
+                                        0.13
+                                    ],
+                                    [
+                                        "v5.1",
+                                        0.2
+                                    ]
+                                ]
+                            },
+                            {
+                                name: "Edge",
+                                id: "Edge",
+                                data: [
+                                    [
+                                        "v16",
+                                        2.6
+                                    ],
+                                    [
+                                        "v15",
+                                        0.92
+                                    ],
+                                    [
+                                        "v14",
+                                        0.4
+                                    ],
+                                    [
+                                        "v13",
+                                        0.1
+                                    ]
+                                ]
+                            },
+                            {
+                                name: "Opera",
+                                id: "Opera",
+                                data: [
+                                    [
+                                        "v50.0",
+                                        0.96
+                                    ],
+                                    [
+                                        "v49.0",
+                                        0.82
+                                    ],
+                                    [
+                                        "v12.1",
+                                        0.14
+                                    ]
+                                ]
+                            }
+                        ]
+                    }
+                });
+            </script>
+        }
     }
     if (Session["Rol"].Equals("Estudiante"))
     {
@@ -96,5 +534,8 @@ else
                 </div>
             </div>
         </main>
+
+
+
     }
 }
