Se añade CRUD para docentes.

--- a/Views/Admin/Clases.cshtml
+++ b/Views/Admin/Clases.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-
     ViewBag.Title = "Clases";
     Layout = "~/Views/Shared/_Paneles.cshtml";
 
@@ -10,12 +9,22 @@
 }
 else
 {
-    <main class="app-content">
+
+
+<main class="app-content">
         <div class="app-title">
             <div>
                 <h1><i class="fas fa-school"></i> Clases</h1>
                 <p>Crea,elimina y edita clases</p>
+                @if (ViewContext.Controller.ViewBag.Entra == "S")
+                {
                 <button class="btn btn-primary" type="button" onclick="openModal();"><i class="fa fa-plus-circle"></i> Nuevo</button>
+                    }else{
+            <div class="alert alert-danger" role="alert">
+               Esta fuera de los tiempos para crear cursos.
+            </div>
+                }
+
             </div>
             <ul class="app-breadcrumb breadcrumb">
                 <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
@@ -48,12 +57,26 @@ else
                                                                         <p class="card-text">Fecha de inicio: @datax.Per_Ini</p>
                                                                         <p class="card-text">Fecha de fin: @datax.Per_Fin</p>
                                                                         <hr />
-                                                                        <button onclick="verCurso(@datax.Clas_ID);" class="btn btn-primary">Administrar curso</button>  
+                                                                        <button onclick="verCurso(@datax.Clas_ID);" class="btn btn-primary">Administrar curso</button>
                                                                         <button onclick="elimCurso(@datax.Clas_ID);" class="btn btn-danger">Eliminar curso</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                        } <!-- aca -->
+                                                        }
+                                                        @if (ViewContext.Controller.ViewBag.Entra != "S")
+                                                        {
+                                                            <div class="col-md mb-3">
+                                                                <div class="card" style="border-radius: 20px; border-style: solid; ">
+                                                                   
+                                                                    <div class="card-body">
+                                                                        <div class="alert alert-danger text-center" role="alert">
+                                                                            Actualmente no hay ningún periodo académico en curso.
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div> 
+                                                        }
+
                                                     </div>
                                                 </div>
                                             </div>
