--- a/Views/Admin/VerClase.cshtml
+++ b/Views/Admin/VerClase.cshtml
@@ -63,7 +63,7 @@
                                                                 <p class="card-text">Asigna y edita las asignaturas para esta clase.</p>
                                                                 <hr />
                                                                 <div class="text-center">
-                                                                    <button onclick="MateriasClase();" class="btn btn-primary">Administrar asignaturas</button>
+                                                                    <button onclick="MateriasClase(@ViewBag.ID);" class="btn btn-primary">Administrar asignaturas</button>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -124,6 +124,10 @@
         }
         function DocentesClase(id) {
               var url = '@Url.Action("DocentesClase", "Admin", new { id = "__id__"})';
+                window.location.href = url.replace('__id__', id);
+        }
+        function MateriasClase(id) {
+            var url = '@Url.Action("MateriasClase", "Admin", new { id = "__id__"})';
                 window.location.href = url.replace('__id__', id);
         }
     </script>
